<resources>
    <string name="app_name">Student Intellect</string>
    <string name="testBannerAdUnitId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="testInterstitialAdUnitId" translatable="false">ca-app-pub-3940256099942544/1033173712---</string>
    <string name="activity_material_list_bannerAdUnitId" translatable="false">@string/testBannerAdUnitId</string>
    <string name="activity_pdf_view_bannerAdUnitId" translatable="false">@string/testBannerAdUnitId</string>
    <string name="activity_auth_bannerAdUnitId" translatable="false">@string/testBannerAdUnitId</string>
    <string name="activity_main_bannerAdUnitId" translatable="false">@string/testBannerAdUnitId</string>
    <string name="activity_modulesSelectList_interstitialAdUnitId" translatable="false">@string/testInterstitialAdUnitId</string>
    <string name="activity_materialsList_interstitialAdUnitId" translatable="false">@string/testInterstitialAdUnitId</string>
    <string name="upload_material_rewardedAdUnitId" translatable="false">ca-app-pub-3940256099942544/5224354917---</string>
    <string name="web_client_id" translatable="false">888190263110-ub9bfguv838e3ij6hhfqs2jrlncae5tq.apps.googleusercontent.com</string>
    <string name="night_mode" translatable="false">off</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_email">ssmnd4u@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_blackboard">Blackboard Learn</string>
    <string name="action_info">Info</string>
    <string name="onboarding_slide1_title">Create an account</string>
    <string name="onboarding_slide1_subtitle">Connect with people around the world</string>
    <string name="onboarding_slide1_desc">User will be able to give you live, chat and meet
        with people nearby.</string>
    <string name="onboarding_slide2_title">Login to your account</string>
    <string name="onboarding_slide2_subtitle">Let\'s build connection with new people</string>
    <string name="onboarding_slide2_desc">Connect helps you locate the people around you who
        are closest from your home.</string>
    <string name="onboarding_slide3_title">Login to your account</string>
    <string name="onboarding_slide3_subtitle">Feel the happiness</string>
    <string name="onboarding_slide3_desc">User will be able to give you live, chat and meet
        with people nearby.</string>
    <string name="menu_home">Home</string>
    <string name="image">Image</string>
    <string name="button">Button</string>
    <string name="reset">Reset</string>
    <string name="a_password_must_contain">A password must contain:</string>
    <string name="bullet">•</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="date">%s</string>
    <string name="time">%s</string>
    <string name="email_sent">Email sent.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hello">Hello %s</string>
    <string name="i_accept_the">I accept the </string>
    <string name="i_accept_the_terms_of_service">I accept the terms of service.</string>
    <string name="loading">Loading…</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="notifications">Notifications</string>
    <string name="number">Number</string>
    <string name="register">Register</string>
    <string name="register_underlined">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="terms_of_service"> Terms of Service</string>
    <string name="welcome">Welcome</string>
    <string name="hint_confirm_password">Confirm password *</string>
    <string name="hint_date_of_birth">Date of birth *</string>
    <string name="hint_email_address">Email address *</string>
    <string name="hint_first_names_and_lastname">First name(s) and lastname *</string>
    <string name="hint_gender">Gender *</string>
    <string name="hint_grade">Grade *</string>
    <string name="hint_home_address">Home address *</string>
    <string name="hint_id_number">ID number *</string>
    <string name="hint_last_name">Last name *</string>
    <string name="hint_middle_name">Middle name *</string>
    <string name="hint_names">Name(s) *</string>
    <string name="hint_password">Password *</string>
    <string name="hint_phone_number">Phone number *</string>
    <string name="hint_register_as">Register as</string>
    <string name="hint_relationship">Relationship *</string>
    <string name="hint_school_name">School name *</string>
    <string name="hint_subjects">Subject(s) *</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="check">Check</string>
    <string name="upper_case_letter">Upper case letter</string>
    <string name="lower_case_letter">Lower case letter</string>
    <string name="at_least_6_characters">At least 6 characters</string>
    <string name="space_not_allowed">Space not allowed</string>
    <string name="materials">Materials</string>
    <string name="water_notices">Water Notices</string>
    <string name="electricity_notices">Electricity Notices</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="action_logout">Logout</string>
    <string name="or"><u>OR</u></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_as_anonymous">Continue as Anonymous</string>
    <string name="anonymous">Anonymous</string>
    <string name="profile">Profile</string>
    <string name="sa_code">+27 </string>
    <string name="verification_code">Verification Code *</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="verify">Verify</string>
    <string name="title_settings">Settings</string>
    <string name="sure_to_logout">Are you sure you want to logout?</string>
    <string name="delete">Delete</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About</string>
    <string name="more_options">More Options</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="select_pdf_file">Select PDF file</string>
    <string name="title_activity_pdf_view">PdfViewActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="questions">Questions</string>
    <string name="search">Search</string>
    <string name="contact_email">ssmnd663@gmail.com</string>
    <string name="gmail_not_installed">Email app not installed</string>
    <string name="add_modules">Add Modules</string>
    <string name="share">Share</string>
    <string name="add_module">Add Module</string>
    <string name="module_description">Module Description *</string>
    <string name="module_code">Module Code *</string>
    <string name="study_material">Study Material</string>
    <string name="solutions">Solutions</string>
    <string name="select_modules">Select Modules</string>
    <string name="material_title">Material Title *</string>
    <string name="material_number">Material Number *</string>
    <string name="material_year">Material Year *</string>
    <string name="refresh">Refresh</string>
    <string name="ok">OK</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="send_reset_email">Send reset email</string>
    <string name="student">Student</string>
    <string name="select_your_photo">Select your photo</string>
    <string name="first_names">First names</string>
    <string name="last_name">Lastname</string>
    <string name="phone_number">Phone number</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="to_student_intellect">to Student Intellect</string>
    <string name="to">to</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="add_a_module">Add a module</string>
    <string name="upload_study_material">Upload study material</string>
    <string name="export">Export</string>
    <string name="downloads">Downloads</string>
    <string name="creating_account">Creating Account…</string>
    <string name="iploading_image">Uploading Image…</string>
    <string name="updating_profile">Updating Profile…</string>
    <string name="upload_materials">Upload Materials</string>
    <string name="multiple_documents">Multiple Documents</string>
    <string name="single_document">Single Document</string>
    <string name="select_your_modules">Select your modules</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="share_the_app">Share the App</string>
    <string name="feedback">Feedback</string>
    <string name="save_selected_modules">Save selected modules</string>
    <string name="accept">Accept</string>
    <string name="terms">Terms.</string>
    <string name="admin_profile">Admin <b>Profile</b></string>
    <string name="student_profile">Student <b>Profile</b></string>
    <string name="tutor_profile">Tutor <b>Profile</b></string>
    <string name="profile_picture">Profile Picture</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="app_info">App Info</string>
    <string name="app_version">App version</string>
    <string name="edit">Edit</string>
    <string name="feedback_primer">Or, talk to us directly! How can we improve? Report bugs, make a complaint, or tell us what you would like to see in Student Intellect.</string>
    <string name="settings">Settings</string>
    <string name="rate_play_store">Rate Student Intellect on Play Store</string>
    <string name="fill_google_form">Fill Google Form</string>
    <string name="open_play_store">Open on Play Store</string>
    <string name="my_timetable">My Timetable</string>
    <string name="tutorial_videos">Tutorial Videos</string>
    <string name="intellect_calculator">Intellect Calculator</string>
    <string name="study_materials">Study Materials</string>
    <string name="edit_on">Edit On</string>
    <string name="list_view">List View</string>
    <string name="modules">Modules</string>
    <string name="rename">Rename</string>
    <string name="folder_info">Folder Info</string>
    <string name="file_info">File Info</string>
</resources>