<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_materials"
            android:icon="@drawable/ic_books"
            android:title="@string/study_materials" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube"
            app:actionViewClass="android.widget.ImageView"
            android:title="@string/tutorial_videos" />
        <item
            android:id="@+id/action_timetable"
            android:icon="@drawable/ic_timetable"
            app:actionViewClass="android.widget.ImageView"
            android:title="@string/my_timetable"/>
    </group>

    <item
        android:id="@+id/apps"
        android:title="Student Intellect Apps" >
        <menu>
            <item
                android:id="@+id/action_calculator"
                android:icon="@drawable/ic_intellect_calculator"
                android:title="@string/intellect_calculator"
                android:checkable="false"/>
            <item
                android:id="@+id/action_map"
                android:icon="@drawable/ic_map"
                android:title="On-Campus Map"
                app:actionViewClass="android.widget.ImageView"
                android:checkable="false"/>
        </menu>
    </item>

    <item
        android:id="@+id/other_apps"
        android:title="Other Apps" >
        <menu>
            <item
                android:id="@+id/action_blackboard"
                android:icon="@drawable/ic_blackboard"
                android:title="@string/action_blackboard"
                android:checkable="false"/>
        </menu>
    </item>

    <group android:id="@+id/logout_group">
        <item
            android:id="@+id/action_info"
            android:icon="@drawable/ic_info_icon"
            android:title="@string/app_info"
            android:visible="false"
            android:checkable="false"/>
        <item
            android:id="@+id/action_settings_fragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:checkable="false"/>
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:checkable="false"/>
    </group>

</menu>