<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:ignore="AlwaysShowAction"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/primaryVariantColor"
        tools:targetApi="o" />
    <item
        android:id="@+id/edit_materials"
        android:title="@string/edit_on"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit" />
    <item
        android:id="@+id/view_type"
        android:title="@string/list_view"
        app:showAsAction="never"
        android:icon="@drawable/ic_list" />
</menu>