<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="8dp"
        android:src="@drawable/ic_logo_name"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="64dp"
        app:cardElevation="0dp"
        android:backgroundTint="#14009688"
        android:layout_marginStart="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/user_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/nav_header_desc"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/bold"
                    android:maxLines="2"
                    android:textSize="16sp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="14sp"
                    android:textStyle="bold"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofia_pro_light"
                    android:maxLines="2"
                    android:textSize="12sp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="9sp"
                    android:text="@string/nav_header_email"
                    tools:targetApi="o" />
            </LinearLayout>

            <ImageView
                android:id="@+id/profile_button"
                android:layout_width="22dp"
                android:layout_height="64dp"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/ic_arrow_right"
                app:tint="@color/primaryVariantColor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>