<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginBottom="32dp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textStyle="italic"
                android:id="@+id/response_login"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="42dp"
                android:backgroundTint="@color/primaryVariantColor"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:fontFamily="@font/sofia_pro_medium"
                android:textColor="@color/white"
                android:text="@string/login"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_email"
                app:iconTint="@null"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/forget_password"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </LinearLayout>


        <Button
            android:id="@+id/login_with_google"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingStart="16dp"
            android:paddingEnd="42dp"
            android:layout_marginTop="92dp"
            android:backgroundTint="@color/primaryVariantColor"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/sofia_pro_medium"
            android:textColor="@color/white"
            android:text="@string/continue_with_google"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_google"
            app:iconTint="@null"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>